# simple-hyperprocess

./: .gitignore  Cargo.toml  README.md  metadata.json
api/: hyperprocess-app-template-dot-os-v0.wit  task-scheduler.wit  types-hyperprocess-app-template-dot-os-v0.wit
caller-utils/: Cargo.toml
caller-utils/src/: lib.rs
hyperprocess/: Cargo.toml
hyperprocess/src/: lib.rs
pkg/: manifest.json  scripts.json
resources/: contacts.md  kit.md  usage-guide.md
test/: tests.toml
test/api/: hyperprocess.wit  test-hyperprocess-app-template-dot-os-v0.wit
test/hyperprocess-test/: Cargo.toml  metadata.json
test/hyperprocess-test/api/: types-hyperprocess-app-template-dot-os-v0.wit
test/hyperprocess-test/hyperprocess-test/: Cargo.toml
test/hyperprocess-test/hyperprocess-test/src/: lib.rs
test/hyperprocess-test/pkg/: manifest.json
